--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BitcoinRateWidget",
+  "name": "btc-rate",
   "version": "0.0.1",
   "description": "USD/BTC exchange rate in an osx dashboard widget",
   "main": "index.html",
@@ -8,7 +8,9 @@
     "grunt-bowercopy": "~1.0.0",
     "grunt-contrib-copy": "~0.5.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt-contrib-commands": "~0.1.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
