--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-copy": "~0.5.0"
   },
   "devDependencies": {
-    "grunt-contrib-commands": "~0.1.6"
+    "grunt-contrib-commands": "~0.1.6",
+    "grunt-contrib-clean": "~0.5.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
